Merges traits branch and fixes issues.